--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -6,7 +6,7 @@
 		<!-- Viewport mobile tag for sensible mobile support -->
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-		<!--STYLES-->
+<!--STYLES-->
 <link rel="stylesheet" href="/styles/bootstrap/bootstrap-theme.css">
 <link rel="stylesheet" href="/styles/bootstrap/bootstrap.css">
 <link rel="stylesheet" href="/styles/jqueryUI/jquery-ui.css">
@@ -16,12 +16,13 @@
 <link rel="stylesheet" href="/styles/importer.css">
 <!--STYLES END-->
 
-		<!--SCRIPTS-->
+<!--SCRIPTS-->
 <script src="/js/dependencies/sails.io.js"></script>
 <script src="/js/jQuery/jquery-1.11.1.min.js"></script>
 <script src="/js/jQuery/jquery-ui.js"></script>
 <script src="/js/jQuery/jquery.validate.min.js"></script>
 <script src="/js/bootstrap/bootstrap.js"></script>
+<script src="/js/dropzone/dropzone.js"></script>
 <script src="/js/staff/deleteStaff.js"></script>
 <script src="/js/staff/editStaff.js"></script>
 <script src="/js/staff/newStaff.js"></script>
